# mcdiaz

./: .gitignore  404.html  index.html  pyproject.toml  search.html  sitemap.xml
.github/workflows/: gh-pages.yml
deploy/: ansible.cfg  mc.yml
deploy/inventory/produksi/: produksi
deploy/inventory/produksi/group_vars/: db.yml  web.yml
deploy/inventory/produksi/host_vars/: diaz.nu.yml
deploy/inventory/staging/: staging
deploy/playbooks/: ngeteh.yml
deploy/roles/__dummy__/tasks/: main.yml
deploy/roles/__dummy__/templates/: dummy.txt
deploy/roles/common/tasks/: main.yml
deploy/roles/firewall/defaults/: main.yml
deploy/roles/firewall/tasks/: main.yml
deploy/roles/firewall/vars/: main.yml
deploy/roles/java/defaults/: main.yml
deploy/roles/java/tasks/: main.yml
deploy/roles/java/vars/: RedHat.yml
deploy/roles/minecraft/defaults/: main.yml
deploy/roles/minecraft/tasks/: main.yml
deploy/roles/minecraft/vars/: main.yml
docs/: mkdocs.yml
docs/docs/: index.md
search/: search_index.json
